--- a/block-BNaabf/projects/form.html
+++ b/block-BNaabf/projects/form.html
@@ -6,9 +6,9 @@
     <title>Form</title>
   </head>
   <body>
-    <form action="/form" method="post">
-      <input type="text" placeholder="Enter your name..." />
-      <input type="text" placeholder="Enter your email..." />
+    <form action="/form" method="POST">
+      <input type="text" name="name" placeholder="Enter your name..." />
+      <input type="text" name="email" placeholder="Enter your email..." />
       <input type="number" name="age" min="18" max="50" />
       <input type="submit" />
     </form>
